# progress-simple

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
progress_simple/: __init__.py  core.py
tests/: test_progress_simple.py
