[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "progress-simple"
version = "1.0.0"
description = "Minimal progress bar for loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/progress-simple"
